Bugfixes Dedimania and "/admin erasethis"
http://forum.maniaplanet.com/viewtopic.php?p=230796#p230796
http://forum.maniaplanet.com/viewtopic.php?p=230865#p230865

--- a/docs/TODO.txt
+++ b/docs/TODO.txt
@@ -11,6 +11,6 @@ Records-Eyepiece
 ~~~~~~~~~~~~~~~~
  - Move FinishWinnersWidget at Score to left down
  - Change F7 for toggle widgets
- - At TopCount and foreign Players have no red background in LocalRecords
+ - At TopCount and foreign online Players have no red background in LocalRecords
  - Do not send <quad...> when "BgEmpty" is used
  - BUG: After juke a song, the next/prev page buttons does not work
