--- a/docs/TODO.txt
+++ b/docs/TODO.txt
@@ -1,5 +1,6 @@
 UASECO
 ~~~~~~
+ - Retrieve MX-Infos for NextMap
  - Donation: $mindonation, $publicappr and $donation_values in xml
  - Split plugin.manialinks.php into the related plugins and change all old fashioned Windows to the window.class.php, after that remove it
  - Split plugin.panels.php into the related plugins and remove it
@@ -13,6 +14,7 @@ ManiaKarma
 
 Records-Eyepiece
 ~~~~~~~~~~~~~~~~
+ - Player marker from Players behind current should be "grey" instead of red
  - Check positions of the widgets (small ones are not the same height then the larger ones)
  - Add possibilities for <background_color> at <checkpointcount_widget>, <donation_widget>
  - Remove <ladderlimit_widget>, <gamemode_widget>, <player_spectator_widget>, <current_ranking_widget>
